Upgrade Java 17
Issue-ID: POLICY-4673
Change-Id: I01fd3677687b5d2e065d0cc131b338ed841d7e99
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>